--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -1,5 +1,113 @@
 <body>
   <header>
+    <h1>iCall</h1>
+
+    <nav>
+      <ul>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#support">Support</a></li>
+        <li><a href="/login">Log in</a></li>
+        <li><a href="/login">Sign Up</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="intro" class="introduction">
+      <article>
+        <h1>
+          Keeping you connected, wherever you are
+        </h1>
+        <h2>
+          That's what iCall intuitive
+        </h2>
+
+        <ul>
+          <li>Google Authentication</li>
+          <li>Funny Cat Facts</li>
+        </ul>
+
+        <div>
+          <a href="#">Get started</a>
+          <a href="#">How it works?</a>
+        </div>
+      </article>
+      <article>
+        <img src="./assets/iPad_mockup1.png" alt="Laptop view of iCall">
+      </article>
+    </section>
+
+    <section id="features" class="features">
+      <h3>Three essential features</h3>
+      <article>
+        <aside>
+          <div>
+            <img src="./assets/icons/cat.svg" alt="">
+          </div>
+          <div>
+            <h4>Lorem ipsum</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas earum optio nulla. </p>
+          </div>
+        </aside>
+        <aside>
+          <div>
+            <img src="./assets/icons/vid.svg" alt="">
+          </div>
+          <div>
+            <h4>Lorem ipsum</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas earum optio nulla. </p>
+          </div>
+        </aside>
+        <aside>
+          <div>
+            <img src="./assets/icons/msg.svg" alt="">
+          </div>
+          <div>
+            <h4>Lorem ipsum</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas earum optio nulla. </p>
+          </div>
+
+        </aside>
+      </article>
+    </section>
+
+    <section id="pricing" class="pricing">
+      <h3>Explore current package deals</h3>
+      <p>Checkout the best deals available at the moment</p>
+      <div>
+        <article>
+          <h4>€4,99/ month</h4>
+          <p></p>
+          <a href="/">Get plan <span></span></a>
+        </article>
+        <article>
+          <h4>€4,59/ month</h4>
+          <p></p>
+          <a href="/">Get plan <span></span></a>
+        </article>
+        <article>
+          <h4>€3,99/ month</h4>
+          <p></p>
+          <a href="/">Get plan <span></span></a>
+        </article>
+      </div>
+    </section>
+
+    <section id="support">
+
+    </section>
+
+  </main>
+
+  <footer>
+    <p>&copy; <a href="https://github.com/joordy/i-call" target="">Jordy Fronik</a>, 2021</p>
+  </footer>
+</body>
+
+
+{{!-- <body>
+  <header>
     <nav>
       <a href="/"><img src="./assets/icons/icon.png" alt="iCall logo"></a>
       <ul>
@@ -70,6 +178,6 @@
   </main>
 
   <footer>
-    <p>&copy; Jordy Fronik — 2021 — <a href="https://github.com/joordy/i-call" target="">GitHub</a></p>
+    <p>&copy; <a href="https://github.com/joordy/i-call" target="">Jordy Fronik</a>, 2021</p>
   </footer>
-</body> 
+</body>  --}}
