--- a/server/views/404.hbs
+++ b/server/views/404.hbs
@@ -1,1 +1,7 @@
-<h1>{{title}}</h1>
+<body>
+  
+  <h1>{{title}}</h1>
+  <footer>
+    <p>&copy; <a href="https://github.com/joordy/i-call" target="">Jordy Fronik</a>, 2021</p>
+  </footer>
+</body>
