--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -43,29 +43,29 @@
       <article>
         <aside>
           <div>
-            <img src="./assets/icons/cat.svg" alt="">
+            <img src="./assets/icons/cat.png" alt="">
           </div>
           <div>
-            <h4>Lorem ipsum</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas earum optio nulla. </p>
-          </div>
-        </aside>
-        <aside>
-          <div>
-            <img src="./assets/icons/vid.svg" alt="">
-          </div>
-          <div>
-            <h4>Lorem ipsum</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas earum optio nulla. </p>
+            <h4>Random cat facts</h4>
+            <p>Want to keep your conversation funny? Use a Cat Fact! </p>
           </div>
         </aside>
         <aside>
           <div>
-            <img src="./assets/icons/msg.svg" alt="">
+            <img src="./assets/icons/vid.png" alt="">
           </div>
           <div>
-            <h4>Lorem ipsum</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas earum optio nulla. </p>
+            <h4>Audio & HD video conversations</h4>
+            <p>Enjoy a HD connection between one to one or group video call.. </p>
+          </div>
+        </aside>
+        <aside>
+          <div>
+            <img src="./assets/icons/msg.png" alt="">
+          </div>
+          <div>
+            <h4>Messaging</h4>
+            <p>Type in the chat when muted, fast messaging guaranteed. </p>
           </div>
 
         </aside>
@@ -77,18 +77,18 @@
       <p>Checkout the best deals available at the moment</p>
       <div>
         <article>
-          <h4>€4,99/ month</h4>
-          <p></p>
+          <p>€4,99/ month</p>
+          <h4>Pro+</h4>
           <a href="/">Get plan <span></span></a>
         </article>
         <article>
-          <h4>€4,59/ month</h4>
-          <p></p>
+          <p>€4,59/ month</p>
+          <h4>Premium</h4>
           <a href="/">Get plan <span></span></a>
         </article>
         <article>
-          <h4>€3,99/ month</h4>
-          <p></p>
+          <p>€3,99/ month</p>
+          <h4>Starter</h4>
           <a href="/">Get plan <span></span></a>
         </article>
       </div>
@@ -104,80 +104,3 @@
     <p>&copy; <a href="https://github.com/joordy/i-call" target="">Jordy Fronik</a>, 2021</p>
   </footer>
 </body>
-
-
-{{!-- <body>
-  <header>
-    <nav>
-      <a href="/"><img src="./assets/icons/icon.png" alt="iCall logo"></a>
-      <ul>
-        <li>
-          <a href="/">Home</a>
-        </li>
-        <li>
-          <a href="/">About</a>
-        </li>
-        <li>
-          <a href="/">Teams</a>
-        </li>
-        <li>
-          <a href="/">Pricing</a>
-        </li>
-        <li>
-          <a href="/">Contact</a>
-        </li>
-      </ul>
-      <a href="/login">Sign in</a>
-    </nav>
-    <h1>iCall</h1>
-    <h2>That's what iCall intuitive</h2>
-  </header>
-
-  <main>
-    <section>
-      <img src="https://user-images.githubusercontent.com/48051912/115783291-fa182e80-a3bc-11eb-88cc-287c307a51e6.png" alt="Laptop view of iCall">
-    </section>
-
-    <section>
-      <h3>Trusted by over <span>1 student(s)</span>  worldwide</h3>
-      <ul>
-        <li>Amazon</li>
-        <li>Google</li>
-        <li>Apple</li>
-        <li>Microsoft</li>
-      </ul>
-    </section>
-
-    <section>
-      <h3>Features</h3>
-      <article>
-        <figure>
-          <img src="./assets/icons/vid.svg" alt="Video icon">
-          <figcaption>  
-            <h4>Audio & HD video conversations</h4>
-            <p>Enjoy a HD connection between one to one or group video call.</p>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src="./assets/icons/cat.svg" alt="Cat icon">
-          <figcaption>  
-            <h4>Random cat facts</h4>
-            <p>Want to keep your conversation funny? Use a Cat Fact!</p>
-          </figcaption>
-        </figure>  
-        <figure>
-          <img src="./assets/icons/msg.svg" alt="Message icon">
-          <figcaption>  
-            <h4>Messaging</h4>
-            <p>Type in the chat when muted, fast messaging guaranteed.</p>
-          </figcaption>
-        </figure>      
-      </article>
-    </section>
-
-  </main>
-
-  <footer>
-    <p>&copy; <a href="https://github.com/joordy/i-call" target="">Jordy Fronik</a>, 2021</p>
-  </footer>
-</body>  --}}
