--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -31,7 +31,7 @@
     <script defer src="js/script.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.js"></script>
-
+    <script src="https://kit.fontawesome.com/e814c1f3cd.js"></script>
 </html>
 
 
