--- a/server/views/dashboard.hbs
+++ b/server/views/dashboard.hbs
@@ -45,8 +45,6 @@
   </main>
 
   <footer>
-    <p>    
-      &copy; Jordy Fronik. All Rights Reserved.
-    </p>
+    <p>&copy; <a href="https://github.com/joordy/i-call" target="">Jordy Fronik</a>, 2021</p>
   </footer>
 </body>
